--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,12 +45,12 @@
                               <div class="col-xs-4    col-sm-2">
                                 <% if x.photo_file_name.blank?  %>
                                     <% if x.avatar.blank?  %>
-                                        <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico", :size => "100x50" ), x %>
+                                        <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico" ), x %>
                                     <%	 else %>
-                                        <%= link_to image_tag(x.avatar, class: "avatarchico", :size => "100x50" ), x %>
+                                        <%= link_to image_tag(x.avatar, class: "avatarchico" ), x %>
                                     <% end %>
                                 <% else %>
-                                    <%= link_to image_tag(x.photo.url(:square), class: "avatarchico", :size => "100x50" ), x %>
+                                    <%= link_to image_tag(x.photo.url(:square), class: "avatarchico"), x %>
                                 <%	 end %>
                               </div>
                               <div class="col-xs-5 col-sm-5 ">
@@ -127,12 +127,12 @@
                             <div class="col-xs-4    col-sm-2">
                               <% if user.photo_file_name.blank?  %>
                                   <% if user.avatar.blank?  %>
-                                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico", width: "100x50"), user %>
+                                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), user %>
                                   <%         else %>
-                                      <%= link_to image_tag(user.avatar, class: "avatarchico", width: "100x50" ), user %>
+                                      <%= link_to image_tag(user.avatar, class: "avatarchico"), user %>
                                   <% end %>
                               <% else %>
-                                  <%= link_to image_tag(user.photo.url(:square), class: "avatarchico", width: "100x50"), user  %>
+                                  <%= link_to image_tag(user.photo.url(:square), class: "avatarchico"), user  %>
                               <%         end %>
                             </div>
                             <div class="col-xs-5 col-sm-5 ">
