Arreglando instrucciones y configuracion perfil

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,29 @@
+<script>
+    $(document).ready(function () {
 
+
+        var myLatlng = new google.maps.LatLng(23.634501,-102.55278399999997);
+        var mapOptions = {
+            zoom: 4,
+            center: myLatlng
+        }
+        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
+        // Place a draggable marker on the map
+        var marker = new google.maps.Marker({
+            position: myLatlng,
+            map: map,
+            draggable:true,
+            title:"Your location!"
+        });
+
+        google.maps.event.addListener(marker, 'dragend', function (event) {
+            document.getElementById("latbox").value = this.getPosition().lat();
+            document.getElementById("lngbox").value = this.getPosition().lng();
+        });
+
+    });
+</script>
 
 
     <div class="col-md-6 col-md-offset-3">
@@ -15,6 +40,18 @@
         <% end %>
         <br>
         <br>
+
+        <div class="row">
+          <p>¿Quiéres modificar tu ubicación para recomendarte lugares cercanos?.</p>
+        </div>
+        <%= form_for(@user, :html => { :multipart => true }) do |f| %>
+            <div id="map-canvas" class="thumbnail" style="height:200px"></div>
+            <div id="latlong">
+              <div> <%= f.hidden_field :lat, class: 'input-sm', id: 'latbox' %></div>
+              <div> <%= f.hidden_field :lng, class: 'input-sm', id: 'lngbox' %></div>
+            </div>
+            <div class="col-md-7 " style="margin-bottom: 10px"><%= f.submit "Actualiza tu ubiación", class: 'btn btn-large btn-primary' %></div>
+        <% end %>
 
         <br>
         <br>
