--- a/app/views/notelimites/instrucciones.html.erb
+++ b/app/views/notelimites/instrucciones.html.erb
@@ -2,7 +2,7 @@
     $(document).ready(function () {
 
 
-        var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+        var myLatlng = new google.maps.LatLng(23.634501,-102.55278399999997);
         var mapOptions = {
             zoom: 4,
             center: myLatlng
@@ -50,7 +50,7 @@
 
 
 
-
+          <%	 if @user.lat.nil? %>
               <div class="row">
                 <p>Pero primero actualiza tu ubicacón. Mueve el pin a una ubiación cercana a ti y da click en el boton.</p>
               </div>
@@ -62,6 +62,8 @@
                   </div>
                   <div class="col-md-4 col-md-offset-4" style="margin-bottom: 10px"><%= f.submit "Actualiza tu ubiación", class: 'btn btn-primary' %></div>
               <% end %>
+          <%	 else %>
+          <%	 end %>
 
 
 
