Agregando actividades a home

--- a/app/views/shared/_actividades.html.erb
+++ b/app/views/shared/_actividades.html.erb
@@ -41,9 +41,30 @@
 
 
 
-
       <% end %>
 
+<% @actividades.limit(10).order("RANDOM()").each do |x| %>
+
+    <div class="thumbnail">
+        <div class="caption">
+
+          <div>
+            <% x.micrositios.take(1).each do |estado| %>
+                <% if estado.photo_file_size? %>
+                    <%= link_to (image_tag estado.photo.url(:medium)), estado, class: "img-responsive", alt: "responsive image" %>
+                    <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
+                <% else %>
+                    <%= link_to (image_tag "https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/#{estado.photo_file_name}"), estado, class: "img-responsive", alt: "responsive image" %>
+                    <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
+                <% end %>
+            <% end %>
+          </div>
+
+
+        </div>
+    </div>
+
+<% end %>
 
 
 </ul>
