--- a/app/views/micrositios/show.html.erb
+++ b/app/views/micrositios/show.html.erb
@@ -92,13 +92,13 @@
                         <div class="userimagenmicrositio">
                           <% if @micrositio.user.photo_file_name.blank?  %>
                               <% if @micrositio.user.avatar.blank?  %>
-                                  <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png"), @micrositio.user %>
-                              <%	 else %>
-                                  <%= link_to image_tag(@micrositio.user.avatar ), @micrositio.user %>
+                                  <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), @micrositio.user %>
+                              <%         else %>
+                                  <%= link_to image_tag(@micrositio.user.avatar, class: "avatarchico"), @micrositio.user %>
                               <% end %>
                           <% else %>
-                              <%= link_to image_tag(@micrositio.user.photo.url(:square)), @micrositio.user %>
-                          <%	 end %>
+                              <%= link_to image_tag(@micrositio.user.photo.url(:square), class: "avatarchico"), @micrositio.user  %>
+                          <%         end %>
                         </div>
                     <div class="micrositiodescripcion">
                       <p><%=	@micrositio.descripcion  %></p>
