Agregando usuarios a home

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -9,6 +9,15 @@
   border-radius: 6px;
 }
 
+
+
+.avatarmedio{
+  width: 100px;
+  height: 100px;
+  border-radius: 6px;
+}
+
+
 .wrapusers{
   border-radius: 1px;
   background-color: #d1dbff;
