--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -28,6 +28,12 @@
     </div>
 
 
+    <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12"  style="padding: 0px">
+
+
+      <%=	 render 'shared/usuarios' %>
+    </div>
+
 
 
 <% else %>
