--- a/app/views/shared/_usuarios.html.erb
+++ b/app/views/shared/_usuarios.html.erb
@@ -1,36 +1,39 @@
 
 
-
 <ul >
-  <% @usuarios.each do |actividad| %>
-      <li class="actividades">
-       <div class="actividadestitulo"> <%= link_to actividad.name, actividad %> </div>
-        <%= link_to image_tag(actividad.avatar), actividad, class: 'actividadesimagen'%>
-        <div class="actividadesarticulo"><%=  actividad.name %> </div>
-        <div class="actividadesfollow">
-          <div class="actividadesbarrafollow">
-              <div class="actividadesfollow">
-                  <div id="follow_form" >
-                    <% if current_user.following?(actividad) %>
-                        <%= form_for(current_user.relationships.find_by(followed_id: actividad), html: { method: :delete }) do |f| %>
-                            <%= f.submit "Siguiendo", class: "btn " %>
-                        <% end %>
-                    <% else %>
-                        <%= form_for(current_user.relationships.build(followed_id: actividad.id)) do |f| %>
-                            <div><%= f.hidden_field :followed_id %></div>
-                            <%= f.submit "Seguir", class: "btn  btn-primary" %>
-                        <% end %>
-                    <% end %>
-                  </div>
-              </div>
-              <div class="actividadescontador">
-                <%= actividad.followers.count%>
-                Usuarios
-              </div>
-          </div>
+
+
+<% @users.limit(10).order("RANDOM()").each do |x| %>
+
+
+
+    <div class="thumbnail">
+      <div class="caption">
+
+        <div>
+          <% if x.photo_file_name.blank?  %>
+              <% if x.avatar.blank?  %>
+                  <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarmedio"), x %>
+              <%	 else %>
+                  <%= link_to image_tag(x.avatar, class: "avatarmedio" ), x%>
+              <% end %>
+          <% else %>
+              <%= link_to image_tag(x.photo.url(:medium), class: "avatarmedio"), x %>
+          <%	 end %>
         </div>
-      </li>
-  <% end %>
+        <h4><%= x.name %></h4>
+        <p>es nuevo usuario  </p>
+
+
+      </div>
+    </div>
+
+
+
+
+
+<% end %>
+
 
 
 </ul>
