Agrenado foto grande a usuario

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -18,6 +18,14 @@
 }
 
 
+.avatargrande{
+  width: 200px;
+  height: auto;
+  border-radius: 6px;
+}
+
+
+
 .wrapusers{
   border-radius: 1px;
   background-color: #d1dbff;
