--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,53 +1,31 @@
 
 
-<% if signed_in? %>
-    <!-- sidebar -->
-    <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
 
 
-    <ul class="nav">
-        <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
-      </ul>
-      <ul class="nav hidden-xs" id="lg-menu">
-        <li id="fat-menu" class="dropdown" role="menu">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <%=  current_user.name %><b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Perfil", current_user %></li>
-            <li><%= link_to "Configuración", edit_user_registration_path %></li>
-            <li class="divider"></li>
-            <li>
-              <%= link_to "Salir",  destroy_user_session_path, method: "delete" %>
-            </li>
-          </ul>
-        </li>
-      </ul>
-
-      <ul class="nav hidden-xs" id="lg-menu" >
-        <li class="active"><i class="glyphicon glyphicon-list-alt"  style="padding: 10px;"><%= link_to " Descubre", root_path %></i></li>
-        <li><i class="glyphicon glyphicon-list"  style="padding: 10px;"> <%= link_to "Explora", estados_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Usuarios", users_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Actividades", actividades_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Lugares", micrositios_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Eventos", eventos_path %></i></li>
-      </ul>
-      <ul class="list-unstyled hidden-xs" id="sidebar-footer">
-        <li>
-          <a href="http://www.notelimites.com"><h3>NoTeLimites</h3> <i class="glyphicon glyphicon-circle-arrow-down"></i> NTLapp</a>
-        </li>
-      </ul>
+<!-- sidebar -->
+<div class="col-xs-6 col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
+  <div data-spy="affix" data-offset-top="45" data-offset-bottom="90">
 
 
-      <!-- tiny only nav-->
-      <ul class="nav visible-xs" id="xs-menu">
-        <li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
-        <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
-        <li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
-        <li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>
-      </ul>
 
-    </div>
-    <!-- /sidebar -->
-<%	 else %>
-<%	 end  %>
+
+    <ul class="nav" id="lg-menu" >
+      <br>
+      <li><i > <%= link_to  current_user.name, current_user %></i></li>
+      <br>
+      <li class="active"><i ><%= link_to " Descubre", root_path %></i></li>
+      <li><i > <%= link_to "Explora", estados_path %></i></li>
+      <li><i > <%= link_to "Usuarios", users_path %></i></li>
+      <li><i > <%= link_to "Actividades", actividades_path %></i></li>
+      <li><i > <%= link_to "Lugares", micrositios_path %></i></li>
+      <li><i > <%= link_to "Eventos", eventos_path %></i></li>
+      <li><i > <%= link_to "Configuración", edit_user_registration_path %></i></li>
+      <li><i > <%= link_to "Salir",  destroy_user_session_path, method: "delete" %></i></li>
+    </ul>
+
+
+
+
+  </div>
+</div>
+
