--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
     <title><%= full_title(yield(:title)) %></title>
+    <% if signed_in? 	  %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+    <%  else %>
+    <%= stylesheet_link_tag "principal/custom"%>
+    <%= stylesheet_link_tag "bootstrap"%>
+    <%  end %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
@@ -18,6 +23,25 @@
   </head>
 
   <body>
+
+  <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30392244-1']);
+      _gaq.push(['_setDomainName', 'notelimites.com']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+  </script>
+
+
+
 
   <% if signed_in? 	  %>
 
