--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%  else %>
     <%= stylesheet_link_tag "principal/custom"%>
     <%= stylesheet_link_tag "bootstrap"%>
+    <%= stylesheet_link_tag "notelimites"%>
     <%  end %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
