Agregando iconos a TOPBAR

--- a/app/assets/stylesheets/notelimites.css.scss
+++ b/app/assets/stylesheets/notelimites.css.scss
@@ -7,6 +7,11 @@
 
 }
 
+.icono-pr{
+  width: 35px;
+  margin-top: -10px;
+  margin-right: 10px;
+}
 
 .seleccionado:hover {
   background-color: #e7e8fb;
