--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.avatarchiquito{
+  width: 50px;
+  height: 50px;
+  border-radius: 6px;
+  margin-top: -14px;
+  margin-right: 10px;
+}
+
 
 .avatarchico{
   width: 60px;
