--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,6 +5,10 @@
 <!-- Sidebar -->
 <div id="sidebar-wrapper">
   <ul class="sidebar-nav">
+    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("social.png", class: "icono-pr"), categorias_social_path %></i></li>
+    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("ecoturismo.png", class: "icono-pr"), categorias_ecoturismo_path%></i>  </li>
+    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("turismo.png", class: "icono-pr"), categorias_turismo_path%></i>   </li>
+    <li class="hidden-md hidden-lg" ><i><%= link_to image_tag("alternativo.png", class: "icono-pr"), categorias_alternativo_path%></i>   </li>
     <li class="active"><i ><%= link_to " Descubre", root_path %></i></li>
     <li><i > <%= link_to "Explora", estados_path %></i></li>
     <li><i > <%= link_to "Usuarios", users_path %></i></li>
@@ -13,5 +17,8 @@
     <li><i > <%= link_to "Eventos", eventos_path %></i></li>
     <li><i > <%= link_to "Configuración", edit_user_registration_path %></i></li>
     <li><i > <%= link_to "Salir",  destroy_user_session_path, method: "delete" %></i></li>
+
   </ul>
+
+
 </div>
