--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,13 @@
       <%= render 'layouts/sidebar' %>
         <!-- Page content -->
         <div id="page-content-wrapper">
-        <%= render 'layouts/topbar' %>
+
+        <div class="hidden-xs">
+          <%= render 'layouts/topbar' %>
+        </div>
+        <div class="visible-xs">
+          <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
+        </div>
         <!-- Keep all page content within the page-content inset div! -->
             <div class="page-content inset">
                      <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
