--- a/app/views/categorias/_follow_form.html.erb
+++ b/app/views/categorias/_follow_form.html.erb
@@ -1,6 +1,6 @@
 
     <div id="follow_form">
-      <% if current_user.followingcategoria?(@user) %>
+      <% if current_user.followingcategoria?(@categoria) %>
           <%= render 'unfollow' %>
       <% else %>
           <%= render 'follow' %>
