--- a/app/views/categorias/show.html.erb
+++ b/app/views/categorias/show.html.erb
@@ -30,10 +30,10 @@
       <div class="carousel-inner">
         <div class="item active">
           <div class="inner-item ">
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/actividades/photos/sitios/big/<%= @categoria.actividades.first.photo_file_name %>" width="100%"  alt="<%=@categoria.actividades.first.actividad %>">
+            <img src="https://s3.amazonaws.com/imagenes.notelimites/actividades/photos/sitios/big/<%= @categoria.actividades.micrositio.first.photo_file_name %>" width="100%"  alt="<%=@categoria.actividades.first.actividad %>">
           </div>
           <div class="carousel-caption">
-            <h3>   <%=	 @categoria.actividades.first.actividad %>  </h3>
+            <h3>   <%=	 @categoria.actividades.micrositios.first.actividad.micrositio %>  </h3>
           </div>
         </div>
 
