--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -1,6 +1,6 @@
 
 <!-- top navbar -->
-<div class="navbar navbar-default navbar-fixed-top" role="navigation" style="padding-top: 0px">
+<div class="navbar navbar-fixed-top" role="navigation" style="padding-top: 0px; background-color: #f5f5f5">
     <div class="navbar-header">
 
 
@@ -13,7 +13,7 @@
   <nav class="hidden-xs">
     <ul class="nav pull-right" style="margin-right: 100px; padding-top: 20px">
 
-          <ul class="list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 50px">
+          <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 50px">
               <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li>
               <li ><i><%= image_tag("ecoturismo.png", class: "icono-pr")%></i> <%= link_to "Ecoturismo", categorias_ecoturismo_path %></li>
               <li ><i><%= image_tag("turismo.png", class: "icono-pr")%></i> <%= link_to "Turismo", categorias_turismo_path %></li>
@@ -21,18 +21,25 @@
 
           </ul>
           <ul class="pull-left">
-              <li id="fat-menu" class="dropdown">
+
+
+
+
+            <li id="fat-menu" class="dropdown">
+
+
+              <% if current_user.photo_file_name.blank?  %>
+                  <% if current_user.avatar.blank?  %>
+                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"), current_user %>
+                  <%	 else %>
+                      <%= link_to image_tag("http://graph.facebook.com/#{current_user.uid}/picture?type=square", class: "avatarchiquito"), current_user %>
+                  <% end %>
+              <% else %>
+                  <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
+              <%	 end %>
+
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <% if current_user.photo_file_name.blank?  %>
-                      <% if current_user.avatar.blank?  %>
-                          <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"), current_user %>
-                      <%	 else %>
-                          <%= link_to image_tag("http://graph.facebook.com/#{current_user.uid}/picture?type=square", class: "avatarchiquito"), current_user %>
-                      <% end %>
-                  <% else %>
-                      <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
-                  <%	 end %>
-                  <%=  current_user.name %><b class="caret"></b>
+                <%=  current_user.name %><b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Perfil", current_user %></li>
