--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -13,11 +13,11 @@
   <nav class="hidden-xs">
     <ul class="nav pull-right" style="margin-right: 100px; padding-top: 20px">
 
-          <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 50px">
-              <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li>
-              <li ><i><%= image_tag("ecoturismo.png", class: "icono-pr")%></i> <%= link_to "Ecoturismo", categorias_ecoturismo_path %></li>
-              <li ><i><%= image_tag("turismo.png", class: "icono-pr")%></i> <%= link_to "Turismo", categorias_turismo_path %></li>
-              <li ><i><%= image_tag("alternativo.png", class: "icono-pr")%></i> <%= link_to "Alternativo", categorias_alternativo_path %></li>
+          <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 70px;">
+            <button class="topbtn"> <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li></button>
+            <button class="topbtn1"> <li > <i><%= image_tag("ecoturismo.png", class: "icono-pr")%></i> <%= link_to "Ecoturismo", categorias_ecoturismo_path %></li></button>
+            <button class="topbtn1">  <li ><i><%= image_tag("turismo.png", class: "icono-pr")%></i> <%= link_to "Turismo", categorias_turismo_path %></li></button>
+            <button class="topbtn1">  <li ><i><%= image_tag("alternativo.png", class: "icono-pr")%></i> <%= link_to "Alternativo", categorias_alternativo_path %></li></button>
 
           </ul>
           <ul class="pull-left">
