--- a/app/assets/stylesheets/simple-sidebar.css
+++ b/app/assets/stylesheets/simple-sidebar.css
@@ -1,12 +1,14 @@
 #wrapper {
-  padding-left: 250px;
+  padding-left: 200px;
   transition: all 0.4s ease 0s;
 }
 
 #sidebar-wrapper {
+  margin-top: 1px;
+  padding-top: 20px;
   margin-left: -250px;
   left: 250px;
-  width: 250px;
+  width: 200px;
   background: #000;
   position: fixed;
   height: 100%;
@@ -22,7 +24,7 @@
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 200px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -114,4 +116,42 @@
   padding: 15px;
 }
 
+}
+
+
+
+#wrapperr {
+    padding-right: 250px;
+    transition: all 0.4s ease 0s;
+}
+
+#sidebarr {
+    margin-top: 7px;
+    position: fixed;
+    right: 10px;
+    background-color: #ffffff;
+    width: 200px;
+    height: 100%;
+    border-left: solid 1px;
+    border-color: #b1b1b1;
+    overflow: scroll;
+}
+
+#wrapperr {
+    padding-right: 0;
+}
+
+#sidebar-wrapperr {
+    right: 0;
+}
+
+#wrapperr.active {
+    position: relative;
+    right: 250px;
+}
+
+#wrapperr.active #sidebar-wrapperr {
+    right: 250px;
+    width: 250px;
+    transition: all 0.4s ease 0s;
 }
