--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.avatarchiquitito{
+  width: 40px;
+  height: 40px;
+}
+
+
 .avatarchiquito{
   width: 50px;
   height: 50px;
