--- a/app/views/categorias/show.html.erb
+++ b/app/views/categorias/show.html.erb
@@ -14,59 +14,11 @@
     </div>
 </div>
 
+<hr>
+
+<h2 style="color: #090909"> Actividades cercanas a ti   </h2>
 
 
-<div class="row" style="margin-bottom: 20px">
-  <div class="col-md-7 ">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="overflow:hidden" >
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <div class="inner-item ">
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/actividades/photos/sitios/big/<%= @categoria.actividades.micrositio.first.photo_file_name %>" width="100%"  alt="<%=@categoria.actividades.first.actividad %>">
-          </div>
-          <div class="carousel-caption">
-            <h3>   <%=	 @categoria.actividades.micrositios.first.actividad.micrositio %>  </h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="inner-item">
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/actividades/photos/sitios/big/<%= @categoria.actividades.second.photo_file_name %>" width="100%"  alt="<%=@categoria.actividades.first.actividad %>">
-          </div>
-          <div class="carousel-caption">
-            <h3>   <%= @categoria.actividades.second.actividad %>  </h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="inner-item">
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/actividades/photos/sitios/big/<%= @categoria.actividades.third.photo_file_name %>" width="100%"  alt="<%=@categoria.actividades.first.actividad %>">
-          </div>
-          <div class="carousel-caption">
-            <h3>   <%=	 @categoria.actividades.third.actividad %>  </h3>
-          </div>
-        </div>
-
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left glyphicons-chevron-left"></span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right glyphicons-chevron-right"></span>
-      </a>
-    </div>
-  </div>
-</div>
 
 <div>
 </div>
