--- a/app/views/layouts/_sidebarright.html.erb
+++ b/app/views/layouts/_sidebarright.html.erb
@@ -1,49 +1,33 @@
 
 
-<% if signed_in? %>
-    <!-- sidebar -->
-    <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
+<!-- Sidebar -->
+<div style="margin-top: 10px;" >
+  <ul >
+    <% @users.limit(10).order("RANDOM()").each do |x| %>
 
-      <ul class="nav">
-        <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
-      </ul>
+        <li style="height: 55px; font-size: 11px; margin-left: -30px; ">
+         <div style="border-bottom: solid 1px; border-color: #aeaeae; margin-bottom: 6px;">
 
-      <ul class="nav hidden-xs" id="lg-menu" >
-        <li class="active"><i class="glyphicon glyphicon-list-alt"  style="padding: 10px;"><%= link_to " Discover", root_path %></i></li>
-        <li><i class="glyphicon glyphicon-list"  style="padding: 10px;"> <%= link_to "Explore", estados_path %></i></li>
-        <li><i class="glyphicon glyphicon-list"  style="padding: 10px;"> <%= link_to "Follow", users_path %></i></li>
-        <li><i class="glyphicon glyphicon-paperclip"  style="padding: 10px;"> <%= link_to "Activities", actividades_path %></i></li>
-      </ul>
-      <ul class="list-unstyled hidden-xs" id="sidebar-footer">
-        <li>
-          <a href="http://www.notelimites.com"><h3>NoTeLimites</h3> <i class="glyphicon glyphicon-circle-arrow-down"></i> NTLapp</a>
+         </div>
+          <div class="col-md-4">
+          <% if x.photo_file_name.blank?  %>
+              <% if x.avatar.blank?  %>
+                  <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquitito"), x %>
+              <%	 else %>
+                  <%= link_to image_tag(x.avatar, class: "avatarchiquitito" ), x%>
+              <% end %>
+          <% else %>
+              <%= link_to image_tag(x.photo.url(:medium), class: "avatarchiquitito"), x %>
+          <%	 end %>
+          </div>
+          <div class="col-md-8">
+          <p><%= x.name  %> es nuevo usuario  </p>
+          </div>
+
         </li>
-      </ul>
-      <ul class="nav hidden-xs" id="lg-menu">
-      <li id="fat-menu" class="dropdown" role="menu">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <%=  current_user.name %><b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-          <li><%= link_to "Profile", current_user %></li>
-          <li><%= link_to "Settings", edit_user_registration_path %></li>
-          <li class="divider"></li>
-          <li>
-            <%= link_to "Sign out",  destroy_user_session_path, method: "delete" %>
-          </li>
-        </ul>
-      </li>
-      </ul>
 
-      <!-- tiny only nav-->
-      <ul class="nav visible-xs" id="xs-menu">
-        <li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
-        <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
-        <li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
-        <li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>
-      </ul>
 
-    </div>
-    <!-- /sidebar -->
-<%	 else %>
-<%	 end  %>
+
+    <% end %>
+  </ul>
+</div>
