Arreglando sidebar usuarios para todas las paginas

--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -13,7 +13,7 @@
   <div class="container">
 
   <nav class="hidden-xs">
-    <ul class="nav pull-right" style="margin-right: 100px; padding-top: 20px">
+    <ul class="nav pull-right" style="margin-right: 5%; padding-top: 20px">
 
           <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 70px;">
             <button class="topbtn"> <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li></button>
