--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,8 @@
         <!-- Keep all page content within the page-content inset div! -->
             <div class="page-content inset">
 
-                <div class="col-md-10">
+
+                <div class="col-md-10 col-sm-12 col-lg-12">
                      <div class="col-sm-offset-1 col-sm-10 col-xs-10" style="margin-top: 5px; margin-bottom: 5px">
                         <% [:notice, :error, :alert].each do |level| %>
                             <% unless flash[level].blank? %>
@@ -78,8 +79,7 @@
 
                    <%= yield %>
 
-                 </div>
-
+              </div>
             </div>
         </div>
 
