--- a/app/views/notelimites/home.html.erb
+++ b/app/views/notelimites/home.html.erb
@@ -14,19 +14,19 @@
 <% if signed_in? %>
 
 
-      <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12" style="padding: 0px; padding-left: -10px">
+      <div class="col-md-5 col-lg-4 col-sm-4 col-xs-12" style="padding: 0px; padding-left: -10px">
        <%=	 render 'shared/actividades' %>
 
       </div>
 
-    <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12"  style="padding: 0px">
+    <div class="col-md-5 col-lg-4 col-sm-4 col-xs-12"  style="padding: 0px">
 
 
       <%=	 render 'shared/micrositios' %>
     </div>
 
 
-    <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12"  style="padding: 0px">
+    <div class="hidden-md col-lg-4 col-sm-4 col-xs-12"  style="padding: 0px">
 
 
       <%=	 render 'shared/usuarios' %>
