--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -10,21 +10,18 @@
     </div>
 
 
-  <div class="container">
+  <div>
+      <nav class="hidden-xs col-md-offset-4">
+        <ul class="nav " style="margin-right: 5%; padding-top: 20px">
 
-  <nav class="hidden-xs">
-    <ul class="nav pull-right" style="margin-right: 5%; padding-top: 20px">
-
-          <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 70px;">
-            <button class="topbtn"> <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li></button>
-            <button class="topbtn1"> <li > <i><%= image_tag("ecoturismo.png", class: "icono-pr")%></i> <%= link_to "Ecoturismo", categorias_ecoturismo_path %></li></button>
-            <button class="topbtn1">  <li ><i><%= image_tag("turismo.png", class: "icono-pr")%></i> <%= link_to "Turismo", categorias_turismo_path %></li></button>
-            <button class="topbtn1">  <li ><i><%= image_tag("alternativo.png", class: "icono-pr")%></i> <%= link_to "Alternativo", categorias_alternativo_path %></li></button>
-          </ul>
-          <ul class="pull-left">
-         <li id="fat-menu" class="dropdown">
-
-
+              <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 70px;">
+                <button class="topbtn"> <li ><i><%= image_tag("social.png", class: "icono-pr")%></i> <%= link_to "Social" , categorias_social_path %></li></button>
+                <button class="topbtn1"> <li > <i><%= image_tag("ecoturismo.png", class: "icono-pr")%></i> <%= link_to "Ecoturismo", categorias_ecoturismo_path %></li></button>
+                <button class="topbtn1">  <li ><i><%= image_tag("turismo.png", class: "icono-pr")%></i> <%= link_to "Turismo", categorias_turismo_path %></li></button>
+                <button class="topbtn1">  <li ><i><%= image_tag("alternativo.png", class: "icono-pr")%></i> <%= link_to "Alternativo", categorias_alternativo_path %></li></button>
+              </ul>
+          <ul class="pull-right">
+            <li id="fat-menu" class="dropdown">
               <% if current_user.photo_file_name.blank?  %>
                   <% if current_user.avatar.blank?  %>
                       <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquito"), current_user %>
@@ -34,23 +31,26 @@
               <% else %>
                   <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
               <%	 end %>
-
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <%=  current_user.name %><b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Perfil", current_user %></li>
-                  <li><%= link_to "Configuración", edit_user_registration_path(current_user) %></li>
-                  <li class="divider"></li>
-                  <li>
-                    <%= link_to "Salir",  destroy_user_session_path, method: "delete" %>
-                  </li>
-                </ul>
-              </li>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Perfil", current_user %></li>
+                <li><%= link_to "Configuración", edit_user_registration_path(current_user) %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Salir",  destroy_user_session_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
           </ul>
-    </ul>
-  </nav>
+
+
+        </ul>
+      </nav>
 
   </div>
+
+
 
 </div>
