--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -11,7 +11,7 @@
 
 
   <div>
-      <nav class="hidden-xs col-md-offset-4">
+      <nav class="hidden-xs col-md-offset-3">
         <ul class="nav " style="margin-right: 5%; padding-top: 20px">
 
               <ul class=" list-inline pull-left hidden-xs hidden-sm hidden-md" style="margin-right: 70px;">
@@ -32,7 +32,8 @@
                   <%= link_to image_tag(current_user.photo.url(:square), class: "avatarchiquito"), current_user  %>
               <%	 end %>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%=  current_user.name %><b class="caret"></b>
+                <%=  current_user.name %>
+                  <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Perfil", current_user %></li>
