--- a/app/views/layouts/_usuarios_sidebar.html.erb
+++ b/app/views/layouts/_usuarios_sidebar.html.erb
@@ -2,24 +2,26 @@
 
   <%	@users = User.all  %>
   <% @users.limit(10).order("RANDOM()").each do |x| %>
-      <li style="height: 55px; font-size: 11px; margin-left: -30px; ">
-        <div style="border-bottom: solid 1px; border-color: #aeaeae; margin-bottom: 6px;">
 
-        </div>
-        <div class="col-md-4">
-          <% if x.photo_file_name.blank?  %>
-              <% if x.avatar.blank?  %>
-                  <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquitito"), x %>
-              <%	 else %>
-                  <%= link_to image_tag(x.avatar, class: "avatarchiquitito" ), x%>
-              <% end %>
-          <% else %>
-              <%= link_to image_tag(x.photo.url(:medium), class: "avatarchiquitito"), x %>
-          <%	 end %>
-        </div>
-        <div class="col-md-8">
-          <p><%= x.name  %> es nuevo usuario  </p>
+      <li style="font-size: 11px; margin-left: -25px; margin-bottom: 10px; ">
+
+        <div class="row" style="border-bottom: solid 1px; border-color: #aeaeae;">
+            <div class="col-md-4">
+              <% if x.photo_file_name.blank?  %>
+                  <% if x.avatar.blank?  %>
+                      <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchiquitito"), x %>
+                  <%	 else %>
+                      <%= link_to image_tag(x.avatar, class: "avatarchiquitito" ), x%>
+                  <% end %>
+              <% else %>
+                  <%= link_to image_tag(x.photo.url(:medium), class: "avatarchiquitito"), x %>
+              <%	 end %>
+            </div>
+            <div class="col-md-8">
+              <p><%= x.name  %> es nuevo usuario  </p>
+            </div>
         </div>
       </li>
+
   <% end %>
 </ul>
