--- a/app/views/shared/_actividades.html.erb
+++ b/app/views/shared/_actividades.html.erb
@@ -1,14 +1,8 @@
-<ul >
 
       <% @actividades.limit(20).order("RANDOM()").each do |x| %>
-
-
-
             <%  x.followers.limit(10).order("RANDOM()").each do |y|  %>
-                      <div class="thumbnail">
+                      <li class="thumbnail">
                         <div class="caption">
-
-                                      <div>
                                         <% if y.photo_file_name.blank?  %>
                                             <% if y.avatar.blank?  %>
                                                 <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), y %>
@@ -18,37 +12,32 @@
                                         <% else %>
                                             <%= link_to image_tag(y.photo.url(:square), class: "avatarchico"), y %>
                                         <%	 end %>
-                                      </div>
-                                    <h4><%= y.name %></h4>
-                                    <p>ahora está siguiendo a <%= x.actividad %>  </p>
-                                    <% x.micrositios.take(1).each do |estado| %>
-                                        <% if estado.photo_file_size? %>
-                                            <%= link_to (image_tag estado.photo.url(:small), class: "img-responsive", alt: x ), estado%>
-                                            <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
-                                        <% else %>
-                                            <%= link_to (image_tag "https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/#{estado.photo_file_name}", class: "img-responsive nomargin", alt: x), estado %>
-                                            <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
-                                        <% end %>
-                                    <% end %>
-                                        <h3><%= x.actividad %></h3>
-                                        <p>...</p>
+
+
 
                         </div>
-                      </div>
+                        <h4><%= y.name %></h4>
+                        <p>ahora está siguiendo a <%= x.actividad %>  </p>
+                        <% x.micrositios.take(1).each do |estado| %>
+                            <% if estado.photo_file_size? %>
+                                <%= link_to (image_tag estado.photo.url(:small), class: "img-responsive", alt: x ), estado%>
+                                <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
+                            <% else %>
+                                <%= link_to (image_tag "https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/#{estado.photo_file_name}", class: "img-responsive nomargin", alt: x), estado %>
+                                <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
+                            <% end %>
+                        <% end %>
+                        <h3><%= x.actividad %></h3>
+                        <p>...</p>
+                      </li>
 
             <% end %>
-
-
-
-
       <% end %>
 
 <% @actividades.limit(5).order("RANDOM()").each do |x| %>
 
-    <div class="thumbnail">
+    <li class="thumbnail">
         <div class="caption">
-
-          <div>
             <% x.micrositios.take(1).each do |estado| %>
                 <% if estado.photo_file_size? %>
                     <%= link_to (image_tag estado.photo.url(:medium), class: "img-responsive", alt: x), estado %>
@@ -58,13 +47,6 @@
                     <div style="font-weight: bold; overflow: hidden"><%= link_to estado.name, estado		  %> </div>
                 <% end %>
             <% end %>
-          </div>
-
-
         </div>
-    </div>
-
+    </li>
 <% end %>
-
-
-</ul>
