--- a/app/views/estados/show.html.erb
+++ b/app/views/estados/show.html.erb
@@ -1,3 +1,5 @@
+<div class="col-md-12 ">
+
 
   <div class="row" style="margin-bottom: 20px;  ">
     <div class="col-md-5">
@@ -26,7 +28,7 @@
         <div class="carousel-inner">
           <div class="item active">
           <div class="inner-item ">
-            <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.first.photo_file_name %>" width="100%"  alt="<%=@estado.micrositios.first.name %>">
+            <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.first.photo_file_name %>"height="300px" width="100%"  alt="<%=@estado.micrositios.first.name %>">
           </div>
             <div class="carousel-caption">
            <h3>   <%=	 @estado.micrositios.first.name %>  </h3>
@@ -35,7 +37,7 @@
 
           <div class="item">
             <div class="inner-item">
-              <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.second.photo_file_name %>" width="100%"  alt="<%=@estado.micrositios.first.name %>">
+              <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.second.photo_file_name %>"height="300px" width="100%"  alt="<%=@estado.micrositios.first.name %>">
             </div>
             <div class="carousel-caption">
               <h3>   <%= @estado.micrositios.second.name %>  </h3>
@@ -44,7 +46,7 @@
 
           <div class="item">
             <div class="inner-item">
-              <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.third.photo_file_name %>" width="100%"  alt="<%=@estado.micrositios.first.name %>">
+              <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= @estado.micrositios.third.photo_file_name %>"height="300px" width="100%"  alt="<%=@estado.micrositios.first.name %>">
             </div>
             <div class="carousel-caption">
               <h3>   <%=	 @estado.micrositios.third.name %>  </h3>
@@ -63,25 +65,28 @@
       </div>
     </div>
   </div>
-  <div class="row " style="border-top: 1px solid #acacac">
-    <div class="col-md-9" style="border-right: 1px solid #acacac" >
 
-      <h2>Micrositios</h2> <p>Ver todos los eventos</p>
-     <ul>
-     <% @estado.micrositios.each do |estado| %>
-              <li  >
-                <div class="thumbnail col-md-4" style="margin: 0px">
-                  <div >
+</div>
+<div class="col-md-12">
+    <div >
+      <li class="col-md-9 col-sm-9 col-xs-6 " style="margin: 0; border-top: 1px solid #acacac; border-right: 1px solid #acacac;" >
+        <h2>Micrositios</h2>
+        <p><%= link_to "Ver todos los micrositios", micrositios_path %></p>
+
+        <% @estado.micrositios.each do |estado| %>
+              <ul class="thumbnail col-md-4 col-sm-6 col-xs-12">
+
+                    <div style="height: 150px">
                       <% if estado.photo_file_size? %>
-                            <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image" %>
+                            <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image", height: 150 %>
                       <% else %>
-                            <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" class="img-responsive" alt="Responsive image">
+                            <img src="https://s3.amazonaws.com/imagenes.notelimites/micrositios/photos/sitios/big/<%= estado.photo_file_name %>" height="150px" width="100%" alt="Responsive image">
                       <% end %>
-                  </div>
+                    </div>
                   <div class="caption">
-                    <h3><%= link_to estado.name, estado %> </h3>
+                    <h3><%= link_to estado.name.first(12) + " ...", estado %> </h3>
                     <div class="row">
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <% if estado.user.photo_file_name.blank?  %>
                             <% if estado.user.avatar.blank?  %>
                                 <%= link_to image_tag("http://imagenes.notelimites.s3.amazonaws.com/users/default_user.png", class: "avatarchico"), estado.user %>
@@ -92,7 +97,7 @@
                             <%= link_to image_tag(estado.user.photo.url(:square), class: "avatarchico"), estado.user %>
                         <%	 end %>
                       </div>
-                      <div class="col-md-9">
+                      <div class="col-md-8">
                         <%= link_to estado.user.name , estado %>
                       </div>
                     </div>
@@ -104,7 +109,7 @@
                       </div>
                     </div>
                     <div class="row " style="margin-bottom: 10px; font-weight: bold">
-                      <div class="col-md-6 col-md-offset-6">
+                      <div class="col-md-8 col-md-offset-2">
                       <%=	 link_to "Ver más -->", estado %>
                       </div>
                     </div>
@@ -130,20 +135,22 @@
 
                     </div>
                   </div>
-                </div>
-              </li>
-            <% end %>
+              </ul>
+        <% end %>
 
 
-     </ul>
+      </li>
+
     </div>
+    <div class="col-md-3 col-sm-3 col-xs-6 " style="border-top: 1px solid #acacac">
 
-    <div class="col-md-3" >
-      <h2>Eventos</h2>
-      <ul>
+
+      <ul class="col-md-12 col-sm-3 col-xs-12" >
+        <h2>Eventos</h2>
+        <p>  <%=	 link_to "Ver todos los eventos", eventos_path %></p>
         <% @estado.eventos.each do |estado| %>
 
-            <li class="thumbnail col-md-12">
+            <li class="thumbnail " >
               <% if estado.photo_file_size? %>
                   <%= link_to estado.nombre, estado %>
                   <%= image_tag estado.photo.url(:big), class: "img-responsive", alt: "responsive image" %>
@@ -197,7 +204,5 @@
 
       </ul>
     </div>
-  </div>
 
-
-
+</div>
