--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -570,6 +570,7 @@ aside {
   padding-bottom: 20px;
   padding-top: 10px;
   margin-top: 50px;
+  margin-bottom: 50px;
   text-align: center;
   border-radius: 5px;
   background-color: #a6c7ed;
