--- a/app/views/actividades/show.html.erb
+++ b/app/views/actividades/show.html.erb
@@ -1,3 +1,4 @@
+<%	 if signed_in? %>
 <div class="container">
 
   <div class="row">
@@ -27,3 +28,11 @@
 
 
 </div>
+
+<% else %>
+
+    <%=	 render "shared/ingresa" %>
+
+
+
+<% end %>
