--- a/app/views/shared/_ingresa.html.erb
+++ b/app/views/shared/_ingresa.html.erb
@@ -1,16 +1,20 @@
 
-<div class="col-md-10 col-md-offset-1 col-xs-12">
 
-<%=	link_to(new_user_registration_path) do   %>
-    <button class="row ingresaya">
+    <div class="col-md-10 col-md-offset-1 col-xs-12">
 
-      <h3>Te invitamos a que te registres GRATIS para que puedas ver todos los lugares, eventos y muchas otras cosas que
-            NoTeLimites tiene para ti.</h3>
+    <%=	link_to(new_user_registration_path) do   %>
+        <button class="row ingresaya">
+
+          <h3>Te invitamos a que te registres GRATIS para que puedas ver todos los lugares, eventos y muchas otras cosas que
+                NoTeLimites tiene para ti.</h3>
 
 
-      <hr>
-      <%=	image_tag("LogoNTL.png") %>
+          <hr>
+          <%=	image_tag("LogoNTL.png") %>
 
-    </button>
-<%	 end %>
-</div>
+        </button>
+    <%	 end %>
+
+
+    <hr style="margin-left: -200px; margin-right: -200px;">
+    </div>
